--- a/public/style.css
+++ b/public/style.css
@@ -10,6 +10,7 @@ body {
   font-size: 1rem;
   letter-spacing: 0.01em;
   min-height: 100vh;
+  min-width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -79,7 +80,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  
+  height: 100%;
   max-width: 100vw;
   max-height:100vh;
   margin: 20px auto;
