--- a/public/style.css
+++ b/public/style.css
@@ -83,10 +83,10 @@ body {
   height: 100%;
   max-width: 100vw;
   max-height:100vh;
-  margin: 20px auto;
+  margin: auto auto auto auto;
   background: #232946;
   border-radius: 18px;
-  padding: 24px;
+  padding: 20px;
   overflow-x: auto; 
   overflow-y:auto ;/* horizontal scroll on small screens */
 }
@@ -108,7 +108,7 @@ body {
 =========================== */
 table {
   width: 97%;
-  
+  height: max-content;
   border-collapse: separate;
   border-spacing: 0;
   margin-bottom: 24px;
@@ -143,7 +143,7 @@ th {
 }
 
 tr:nth-child(even) td { background: #232946; }
-tr:nth-child(odd) td { background: #181a20; }
+tr:nth-child(odd) td { background: #1b1d24; }
 
 input[type="number"], input[type="text"], select {
   width: 100%;
@@ -202,7 +202,7 @@ select {
   color: #232946;
   border: none;
   border-radius: 22px;
-  padding: 10px 14.5px;
+  padding: 10px 13.5px;
   font-size: 1rem;
   font-weight: 700;
   cursor: pointer;
@@ -248,7 +248,7 @@ select {
 .tie-badge   { background: #ffe066; color: #232946; }
 
 .leading-cell {
-  animation: glow 1.5s infinite alternate;
+  animation: glow 0.8s infinite alternate;
 }
 
 @keyframes glow {
@@ -258,8 +258,10 @@ select {
 
 /* Winner input widths */
 td input[name="winner1"],
-td input[name="winner2"] {
-  width: 95%;
+td input[name="winner2"] ,
+td input[name="winner3"] {
+    
+  width: 98%;
 }
 
 /* ===========================
@@ -267,10 +269,10 @@ td input[name="winner2"] {
 =========================== */
 @media (max-width: 480px) {
   body, #mainSection, .container { font-size: 0.85rem; padding: 12px; }
-  table { min-width: 400px;   }
+  table { min-width: 300px;   }
   th, td { font-size: 0.8rem; padding: 3px 5px; max-width: 100px; }
   input[type="text"], input[type="number"], select { font-size: 0.75rem; padding: 2px 4px; }
-  .nav-btn { padding: 8px 16px; font-size: 0.85rem; }
+  .nav-btn { padding: 8px 13.5px; font-size: 0.85rem; }
   .add-btn { padding: 6px 16px; font-size: 0.85rem; }
 }
 td input[name="gameName"] {
@@ -283,4 +285,10 @@ table th:nth-child(2),
 table td:nth-child(2) {
     min-width: 140px;        /* Adjust width as needed */
     max-width: 300px;        /* Prevent it from getting too big */
+}
+td input[name="teamA"],
+td input[name="teamB"] {
+  width:100%;
+  padding: 4px 9px 0px 4px;    /* Optional: adjust padding */
+    box-sizing: border-box; 
 }
